--- a/examples/dopp.yml
+++ b/examples/dopp.yml
@@ -8,6 +8,11 @@ author: USC Image Understanding Lab
 # Templates allow you to specify preset options for slides.
 templates:
 
+  preface:
+    inputs:
+      - Return
+    store: none
+
   # Create a new template for a slide. This one allows users to rate
   # their familiarity with the named celebrity on a scale of 1 to 10.
   survey:
@@ -30,7 +35,7 @@ templates:
     store: value
 
     # Instructions are shown below the stimuli on all slides.
-    instructions: Very unfamiliar - 1 2 3 4 5 - Very familiar
+    instructions: 1 - very unfamiliar, 3 - vaguely familiar, 5 - very familiar
 
   # This template will be used for slides where the user has to choose
   # which picture is of the real celebrity.
@@ -51,13 +56,25 @@ templates:
 # Slides are the actual displays subjects are shown
 slides:
 
-  - Tom Cruise Survey
+  - Familiarity Preface
+    template: preface
+    instructions: >
+      Welcome to the Doppelgänger Discrimination Test.
+      In this first section, you will indicate how familiar you are with each celebrity on a scale of 1 to 5.
+      Use your number keys to answer.
+
+  - Familiarity Slide 1
     template: survey
     stimuli: Tom Cruise
 
-  - Tom Cruise Choice
+  - Discrimination Preface
+    template: preface
+    instructions: >
+      In this section, you will attempt to determine which person in each pair is the celebrity.
+      Use the left and right buttons to select the corresponding side.
+
+  - Discrimination Slide 1
     template: choice
     correct: Left
     stimuli:
-      - assets/tom_cruise/correct.png
-      - assets/tom_cruise/incorrect.png
+      - assets/dopp/males/slide1.png
